--- a/说明文档.md
+++ b/说明文档.md
@@ -939,3 +939,115 @@ v-model="article.cover.images[index]"value
 2》serve -s dist\
 ```
 
+将我们的项目部署到GitHub Pages
+
+```
+1》准备一个自己的域名（非必须）
+	1-1》GitHub默认的免费或域名强制开启https
+	1-2》在https协议中无法发出http请求
+	1-3》我们项目中使用的接口但是http协议的，所以要准备一个自己的域名，
+		因为自定义域名可以选择使用http协议或https协议
+    1-3》或者让接口开发者为接口服务提供https的支持
+2》添加CNAME记录
+3》生产GitHub访问令牌
+	步骤：
+```
+
+​			![image-20210608210952559](C:\Users\asus\AppData\Roaming\Typora\typora-user-images\image-20210608210952559.png)
+
+![image-20210608211220160](C:\Users\asus\AppData\Roaming\Typora\typora-user-images\image-20210608211220160.png)
+
+![image-20210608211401114](C:\Users\asus\AppData\Roaming\Typora\typora-user-images\image-20210608211401114.png)
+
+
+
+![image-20210608211626577](C:\Users\asus\AppData\Roaming\Typora\typora-user-images\image-20210608211626577.png)
+
+
+
+
+
+![image-20210608211658158](C:\Users\asus\AppData\Roaming\Typora\typora-user-images\image-20210608211658158.png)
+
+
+
+​          Token：     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   （非常重要）
+
+![image-20210608211801469](C:\Users\asus\AppData\Roaming\Typora\typora-user-images\image-20210608211801469.png)
+
+​	3》在项目public目录中添加 CNAME    
+
+```
+自定义域名  toutiao.kikg.com
+```
+
+​			
+
+> 4》将项目推送到GitHub
+>
+> 5》将GitHub访问令牌添加到远程仓库的secrets中
+>
+> ​	
+>
+> ![image-20210608213036729](C:\Users\asus\AppData\Roaming\Typora\typora-user-images\image-20210608213036729.png)
+>
+> ![image-20210608213333310](C:\Users\asus\AppData\Roaming\Typora\typora-user-images\image-20210608213333310.png)
+>
+> ![image-20210608213518823](C:\Users\asus\AppData\Roaming\Typora\typora-user-images\image-20210608213518823.png)
+
+
+
+​		添加成功：
+
+> ![image-20210608213803059](C:\Users\asus\AppData\Roaming\Typora\typora-user-images\image-20210608213803059.png)
+>
+> 
+>
+> > 6》在项目根目录中添加  **.github/workflows/main.yml**      (老师：lipengzhou)
+> >
+> > ​	自动部署
+> >
+> > ```yml
+> > name: build and deploy
+> > 
+> > # 当 master 分支 push 代码的时候触发 workflow
+> > on:
+> >   push:
+> >     branches:
+> >     - master
+> > 
+> > jobs:
+> >   build-deploy:
+> >     runs-on: ubuntu-latest
+> >     steps:
+> >     # 下载仓库代码
+> >     - uses: actions/checkout@v2
+> > 
+> >     # 缓存依赖
+> >     - name: Get yarn cache
+> >       id: yarn-cache
+> >       run: echo "::set-output name=dir::$(yarn cache dir)"
+> >     - uses: actions/cache@v1
+> >       with:
+> >         path: ${{ steps.yarn-cache.outputs.dir }}
+> >         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+> >         restore-keys: |
+> >           ${{ runner.os }}-yarn-
+> >     # 安装依赖
+> >     - run: yarn
+> > 
+> >     # 打包构建
+> >     - run: yarn build
+> > 
+> >     # 发布到 GitHub Pages
+> >     - name: Deploy
+> >       uses: peaceiris/actions-gh-pages@v2
+> >       env:
+> >         PERSONAL_TOKEN: ${{ secrets.ACCESS_TOKEN }} # 访问秘钥
+> >         PUBLISH_BRANCH: gh-pages # 推送分支
+> >         PUBLISH_DIR: ./dist # 部署目录
+> > ```
+> >
+> > 
+
+​		
