--- a/说明文档.md
+++ b/说明文档.md
@@ -1048,6 +1048,6 @@ v-model="article.cover.images[index]"value
 > >         PUBLISH_DIR: ./dist # 部署目录
 > > ```
 > >
-> > 
+> > 8》将代码推送到远程仓库
 
-​		
+​				git push
