--- a/说明文档.md
+++ b/说明文档.md
@@ -2,7 +2,7 @@
 
 ​	建议把：https://standardjs.com/rules-zhcn.html 看一遍，然后在写的时候遇到错误就查询解决
 
-2》Element 组件库	
+**2》Element 组件库**	
 
 ```js
  // 加载element组件库
@@ -16,7 +16,7 @@
  Vue.use(ElementUI)
 ```
 
-3》封装请求模块
+**3》封装请求模块**
 
 ```js
 import axios from 'axios'
@@ -28,7 +28,7 @@ const request =  axios.create({
 export default request
 ```
 
-4》快速生成自定义代码段：百度一下。
+**4》快速生成自定义代码段：百度一下**。
 
 Sublime: Sublime 自定义代码段
 
@@ -36,13 +36,13 @@ Visual Studio Code：Visual Studio Code 代码段
 
 
 
-5》关于路径中的 @
+**5》关于路径中的 @**
 
 ```
 在Vue-cli 创建的项目中 @代表src 是src的别名 。不受当前文件路径的影响
 ```
 
-6》登陆-页面布局
+**6》登陆-页面布局**
 
 ```css
 <el-form> 表单组件  每个表单项都必须使用 <el-form-item> 组件包裹
@@ -971,7 +971,7 @@ v-model="article.cover.images[index]"value
 
 
 
-​          Token：     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   （非常重要）
+​          Token：    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   （非常重要）
 
 ![image-20210608211801469](C:\Users\asus\AppData\Roaming\Typora\typora-user-images\image-20210608211801469.png)
 
@@ -1051,3 +1051,33 @@ v-model="article.cover.images[index]"value
 > > 8》将代码推送到远程仓库
 
 ​				git push
+
+​		9》Action 查看部署情况
+
+​		10》setting
+
+
+
+
+
+搭建自己的个人网站
+
+```
+1》WordPress
+	基于PHP开发的一个开源的网站工具
+	它不能部署到GitHub pages,因为它需要PHP允许环境
+	如果想玩，要购买服务器
+2》Ghost
+	基于Node.js开发的一个开源的网站工具
+ 
+```
+
+
+
+Vue 项目构建优化
+
+1》把VueCLI升级到最新稳定版       查看当前版本：vue --version   /    vue  -V
+
+​	升级VueCLI:  npm install -g @vue/cli
+
+​	升级您的项目中 VueCLI 相关内容：  vue upgrde
