--- a/说明文档.md
+++ b/说明文档.md
@@ -1080,4 +1080,4 @@ Vue 项目构建优化
 
 ​	升级VueCLI:  npm install -g @vue/cli
 
-​	升级您的项目中 VueCLI 相关内容：  vue upgrde
+​	升级您的项目中 VueCLI 相关内容：先git status     再vue upgrade
