--- a/说明文档.md
+++ b/说明文档.md
@@ -1008,7 +1008,7 @@ v-model="article.cover.images[index]"value
 > >
 > > 6》在项目根目录中添加  **.github/workflows/main.yml**      (老师：lipengzhou)
 > >
-> > ​	自动部署
+> > ​	配置自动部署
 > >
 > > ```yml
 > > name: build and deploy
