--- a/说明文档.md
+++ b/说明文档.md
@@ -1168,3 +1168,28 @@ vueCLI内置了：
 ​	thread-loader
 ```
 
+async函数--返回值
+
+```js
+async function main() {
+	//如果返回值不是  promise对象，会直接包装到promise中返回
+    //如果返回值是promise就直接返回
+    return 123
+    //
+    //return new promise(resolve => {
+    //	resolve(123)
+    //})
+}
+const data = main()
+console.log(data)   // 返回一个promise
+所有要拿到返回结果还要：
+main().then(res=> {
+    console.log(res)   // 返回123
+})
+或
+async function main1() {
+    const data = await main1()
+    console.log(data) // 返回123
+}
+```
+
